--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
               </svg>
             </div>
             <div>
-              <h3>Emotion Aware</h3>
+              <h3>Emotionally-Aware</h3>
               <p>Responds to cues in tone and interaction patterns to adapt in real time.</p>
             </div>
           </div>
@@ -986,7 +986,7 @@
 
     // Copy email
     $("#copyEmail").addEventListener("click", async () => {
-      const email = "hello@emotional.toys";
+      const email = "toys@ratio.club";
       try{
         await navigator.clipboard.writeText(email);
         alert("Copied: " + email);
