--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
         <div class="ctaBanner">
           <div class="ctaInner">
             <h3>Get in touch</h3>
-            <p>Email: <strong>hello@emotional.toys</strong> (replace with your real address)</p>
+            <p>Email: <strong>toys@ratio.club</strong> us</p>
             <button class="btn btn-ghost btn-wide" id="copyEmail">COPY EMAIL</button>
           </div>
         </div>
