--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
         <div class="ctaBanner">
           <div class="ctaInner">
             <h3>Get in touch</h3>
-            <p>Email: <strong>toys@ratio.club</strong> us</p>
+            <p>Email: <strong>toys@ratio.club</strong></p>
             <button class="btn btn-ghost btn-wide" id="copyEmail">COPY EMAIL</button>
           </div>
         </div>
@@ -814,7 +814,7 @@
 
     <footer>
       <div class="wrap foot">
-        <div>© <span id="year"></span> emotional toys. All rights reserved.</div>
+        <div>© <span id="year"></span> cartheur. All rights reserved.</div>
         <div style="display:flex; gap:14px; flex-wrap:wrap;">
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
