--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 
     <footer>
       <div class="wrap foot">
-        <div>© <span id="year"></span> cartheur. All rights reserved.</div>
+        <div>© 2016 - <span id="year"></span> cartheur. All rights reserved.</div>
         <div style="display:flex; gap:14px; flex-wrap:wrap;">
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
