Alter BuyNow text

--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@ document.getElementById("themeToggle")?.addEventListener("contextmenu", (e) => {
 
     // BUY NOW (demo)
     function buyNow(){
-      alert("Demo action: connect this button to your checkout flow.");
+      alert("When available for order, this button will be active.");
     }
     $("#buyNowTop").addEventListener("click", buyNow);
     $("#heroBuy").addEventListener("click", buyNow);
