--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light dark" />
   <title>Emotional Toys — Interactive Emotional Companions</title>
-  <meta name="description" content="AI toys that feel and connect with you." />
+  <meta name="description" content="Machine-intelligent toys that feel and connect with you." />
 
   
 <style>
@@ -1239,7 +1239,7 @@
 
     // BUY NOW (demo)
     function buyNow(){
-      alert("Demo action: connect this button to your checkout flow.");
+      alert("When the product is ready for ordering, this button will be active.");
     }
     $("#buyNowTop").addEventListener("click", buyNow);
     $("#heroBuy").addEventListener("click", buyNow);
