Chnage button text

--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
             <path d="M4 7h16M4 12h16M4 17h16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
         </button>
-        <button class="btn btn-primary" id="buyNowTop">BUY NOW</button>
+        <button class="btn btn-primary" id="buyNowTop">ORDER NOW</button>
       </div>
     </div>
   </header>
@@ -892,7 +892,7 @@
               <h1>Interactive Emotional Companions</h1>
               <p>Machine-intelligent toys that feel and connect with you. Portable companions with emotive personalities designed for meaningful interactions.</p>
               <div class="heroButtons">
-                <button class="btn btn-primary" id="heroBuy">BUY NOW</button>
+                <button class="btn btn-primary" id="heroBuy">ORDER NOW</button>
                 <button class="btn btn-ghost" id="heroLearn">LEARN MORE</button>
               </div>
             </div>
@@ -1055,7 +1055,7 @@
           <div class="ctaInner">
             <h3>Experience the Future of Emotional AI</h3>
             <p>Bring home a companion that learns your patterns and responds with supportive interaction.</p>
-            <button class="btn btn-primary btn-wide" id="buyNowBottom">BUY NOW</button>
+            <button class="btn btn-primary btn-wide" id="buyNowBottom">ORDER NOW</button>
           </div>
         </div>
       </div>
@@ -1104,7 +1104,7 @@
           <p id="modalCopy"></p>
           <div class="pillRow" id="modalPills"></div>
           <div style="margin-top:16px; display:flex; gap:10px; flex-wrap:wrap;">
-            <button class="btn btn-primary" id="modalBuy">BUY NOW</button>
+            <button class="btn btn-primary" id="modalBuy">ORDER NOW</button>
             <button class="btn btn-ghost" id="modalClose2">CLOSE</button>
           </div>
         </div>
@@ -1126,7 +1126,7 @@
           <a class="btn btn-ghost" href="letty.html">letty</a>
           <a class="btn btn-ghost" href="about.html">about</a>
           <a class="btn btn-ghost" href="contact.html">contact</a>
-          <button class="btn btn-primary" id="menuBuy">BUY NOW</button>
+          <button class="btn btn-primary" id="menuBuy">ORDER NOW</button>
         </div>
       </div>
     </div>
@@ -1237,7 +1237,7 @@
       });
     });
 
-    // BUY NOW (demo)
+    // ORDER NOW (demo)
     function buyNow(){
       alert("When the product is ready for ordering, this button will be active.");
     }
