--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
             <path d="M4 7h16M4 12h16M4 17h16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
         </button>
-        <button class="btn btn-primary" id="buyNowTop">ORDER NOW</button>
+        <button class="btn btn-primary" id="buyNowTop">BUY NOW</button>
       </div>
     </div>
   </header>
