--- a/about.html
+++ b/about.html
@@ -246,8 +246,8 @@
 
     <section class="content">
       <div class="wrap grid">
-        <div class="ovalFrame" style="--img: url('assets/sample.jpg'); --img-pos: 50% 45%;">
-          <img src="assets/sample.jpg" alt="About companion" />
+        <div class="ovalFrame" style="--img: url('assets/luminous-orb.jpg'); --img-pos: 50% 0%;">
+          <img src="assets/luminous-orb.jpg" alt="About companion" />
         </div>
         <div class="panel">
                     <p>We build companions designed for warmth, presence, and continuity. Each character is crafted to feel responsive, gentle, and supportive over time.</p>
