--- a/contact.html
+++ b/contact.html
@@ -246,8 +246,8 @@
 
     <section class="content">
       <div class="wrap grid">
-        <div class="ovalFrame" style="--img: url('assets/sample.jpg'); --img-pos: 50% 45%;">
-          <img src="assets/sample.jpg" alt="Contact companion" />
+        <div class="ovalFrame" style="--img: url('assets/contact.jpeg'); --img-pos: 50% 45%;">
+          <img src="assets/contact.jpeg" alt="Contact companion" />
         </div>
         <div class="panel">
                     <p>Questions, partnerships, or press inquiries—reach out and we’ll get back to you soon.</p>
