Adjust bubble txt

--- a/contact.html
+++ b/contact.html
@@ -252,7 +252,7 @@
         <div class="panel">
                     <p>Questions, partnerships, or press inquiries—reach out and we’ll get back to you soon.</p>
           <p><strong>Email:</strong> toys@ratio.club</p>
-          <div class="pillRow"><span class="pill">toys@ratio.club</span><span class="pill">Press kit available</span><span class="pill">Partnerships</span></div>
+          <div class="pillRow"><span class="pill">Get in touch</span><span class="pill">Press kit available</span><span class="pill">Partnerships</span></div>
           <div style="margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-primary" href="index.html">Shop</a>
             <a class="btn btn-ghost" href="index.html">Back to Home</a>
